# WM145-SDS-CW2

./: .gitignore  README.md
.github/workflows/: build-go.yml  build-rust.yml  go.yml  main.yml  rust-test.yml  rust.yml  terraform.yml  test-go.yml  test-rust.yml
destroy/: destroy.sh  local.sh  nukeconfig.yml  run.sh
doc/adr/: 0001-use-go-and-rust.md  0002-use-aws.md  0003-use-discord-webhooks.md
go-notebook/: compose.yml  dockerfile
go-notebook/app/: go.mod  main.go
js-notebook/: compose.yml  dockerfile
js-notebook/01-notebook/: server.js
js-notebook/app/: package.json  server.js
rust-notebook/: Cargo.toml  Dockerfile  dockerfile
rust-notebook/docker/: Dockerfile
rust-notebook/src/: main.rs  tests.rs
terraform/: main.tf  terraform.tfvars  user-data.sh
