[package]
name = "rust-notebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
rocket = { version = "0.5.0-rc.2" }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars", "tera"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

